database updates, added contact type to eventdetail

--- a/SeniorProject_v01/requirements.txt
+++ b/SeniorProject_v01/requirements.txt
@@ -1,1 +1,15 @@
-django >=1.9, <2
+certifi==2018.4.16
+chardet==3.0.4
+Django==1.11.13
+django-widget-tweaks==1.4.1
+googlemaps==2.5.1
+idna==2.6
+ipaddress==1.0.16
+Pillow==5.0.0
+pip==9.0.1
+pygeoip==0.3.2
+pytz==2016.6
+requests==2.18.4
+setuptools==28.8.0
+urllib3==1.23
+wheel==0.29.0
